Profile, photo and links

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,6 +17,8 @@ $export-colors: (
 $export-vars: (
   block-spacing: $block-spacing,
   gap: $gap,
+  bp-tablet: $tablet,
+  bp-desktop: $desktop,
 );
 :root {
   @each $name, $color in $export-colors {
