--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,6 +31,19 @@ $export-vars: (
   }
 }
 
+* {
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgb(107 103 93);
+  }
+}
+
 // body {
 //   &::after {
 //     @include arrow(#000);
