--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -40,7 +40,10 @@ $export-vars: (
 
   &::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    background-color: rgb(107 103 93);
+    background-color: #b1ab9c;
+    &:hover {
+      background-color: rgb(107 103 93);
+    }
   }
 }
 
