--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -48,13 +48,13 @@ $export-vars: (
 }
 
 @font-face {
-  font-family: 'Noto Sans Mono';
+  font-family: "Noto Sans Mono";
   font-style: normal;
   font-weight: 400;
   src: url("/font/NotoSansMono/NotoSansMono-Regular.ttf");
 }
 @font-face {
-  font-family: 'Noto Sans Mono';
+  font-family: "Noto Sans Mono";
   font-style: normal;
   font-weight: 700;
   src: url("/font/NotoSansMono/NotoSansMono-Bold.ttf");
